<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerVertical="true"
    android:layout_height="match_parent"
    android:background="@drawable/sss"
    android:layout_margin="10dp"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        android:id="@+id/signup"
        android:text="@string/SignUp"
        android:gravity="center"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/NameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_marginTop="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit"
        android:textColorHint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/NameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="20sp"
            android:background="@null"
            android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/NameLayout"
        android:background="@drawable/edit"
        android:textColorHint="#ffffff">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/EmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailId"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="@null"
            android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="30dp"
        android:layout_below="@+id/EmailLayout"
        android:background="@drawable/edit"
        android:textColorHint="#ffffff"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/PasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:background="@null"
            android:padding="0dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="center"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordLayout"
        android:background="@color/spinnerColor"
        android:id="@+id/spinnerLayout"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/designation" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:id="@+id/RegisterSignUp"
        android:layout_margin="10dp"
        android:background="@drawable/buttonback"
        android:layout_below="@+id/spinnerLayout"/>

    </RelativeLayout>

</ScrollView>