<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sss"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="LOGIN"
        android:textColor="#000000"
        android:id="@+id/Login"
        android:textSize="60sp"
        android:textStyle="bold"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/EmailIDLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/Login"
        android:background="@drawable/edit"
        android:textColorHint="#000000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailId"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:background="@null"
            android:textSize="20sp"
            android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:layout_below="@+id/EmailIDLayout"
        app:passwordToggleEnabled="true"
        android:background="@drawable/edit"
        android:textColorHint="#000000">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:background="@null"
            android:padding="0dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="center"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:layout_margin="20dp"
        android:id="@+id/SignIn"
        android:textColor="#ffffff"
        android:background="@drawable/buttonback"
        android:layout_below="@+id/etPasswordLayout"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="OR"
        android:textColor="#000000"
        android:id="@+id/or"
        android:textSize="20sp"
        android:layout_below="@+id/SignIn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SignUp"
        android:layout_margin="20dp"
        android:id="@+id/SignUp"
        android:textColor="#ffffff"
        android:background="@drawable/buttonback"
        android:layout_below="@+id/or"/>

    </RelativeLayout>

</ScrollView>